# Quadcopter

./: RTIMULib.ini  control  control.cpp  control.h  esc  esc.cpp  esc.h  main  main.cpp  sensor  sensor.cpp  sensor.h
autonomous/: readme.md
autonomous/src/: CMakeLists.txt
autonomous/src/gps/src/: gps.cpp
autonomous/src/imu/src/: imu.cpp
autonomous/src/include/control/: pid.hpp  quadControlTask.hpp
autonomous/src/include/core/: abstractSensor.hpp  baseClient.hpp  baseServer.hpp  deviceData.hpp  deviceTask.hpp
autonomous/src/include/device/: i2c.hpp  pwm.hpp  uart.hpp
autonomous/src/include/sensor/: gpsTask.hpp  imu.hpp  imuDefs.h  imuTask.hpp  mpu9250.hpp
autonomous/src/include/stream/: complementaryFilter.hpp  ewma.hpp  filter.hpp  rateIntegral.hpp
autonomous/src/include/utils/: math.hpp  misc.hpp
autonomous/src/quadcopter/src/: quadcopter.cpp
autonomous/src/sample/src/: example.cpp
quadcopter/src/common/: __init__.py  constants.py
quadcopter/src/common/app/: __init__.py  config.py  error_messages.py
quadcopter/src/common/schemas/: request.py
quadcopter/src/common/utils/: file.py  image_converter.sh
quadcopter/src/control/: cli.py  environment.yml  requirements.txt
quadcopter/src/control/server/: app.py
quadcopter/src/control/server/camera/: __init__.py  utils.py  video.py
quadcopter/src/control/server/routes/: __init__.py
quadcopter/src/deep_learning/object_detection/: model.py  train.py
quadcopter/src/rpi/: __init__.py  cli.py  readme.md  requirements.txt
quadcopter/src/rpi/server/: __init__.py  app.py  readme.md
(+16 files in other folders)
